# bazel-differ

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum  test.sh
.github/workflows/: bazel-ci.yaml  release.yml
cli/: BUILD.bazel  main.go
cmd/: BUILD.bazel  diff.go  generate_hashes.go  get_targets.go  root.go
internal/: BUILD.bazel  bazel.go  bazel_client.go  bazel_rule.go  bazel_sourcefile_target.go  build.pb.go  filesystem.go  git_client.go  io_utils.go  proto_delimited.go  proto_delimited_test.go  query.protodelim  target_hashing_client.go  target_hashing_client_test.go
internal/cache/: BUILD.bazel  cache_manager.go  disk_cache.go
mocks/: BUILD.bazel  bazel_client_mock.go  bazel_rule_mock.go  rule_provider_mock.go
protos/: build.proto
tools/: diff-sha.sh  test_compatibility.sh  test_helper.sh  test_runner.sh  tests.sh  workspace_status.sh
tools/bazel-diff/: BUILD.bazel
tools/snapshots/: multiple_file_targets.txt  single_file_change_targets.txt  workspace_change_targets.txt
