load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cli",
    srcs = ["main.go"],
    importpath = "github.com/ewhauser/bazel-differ/bazel-differ",
    visibility = ["//visibility:private"],
    deps = ["//cmd"],
)

go_binary(
    name = "bazel-differ",
    embed = [":cli"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bazel-differ-linux-amd64",
    embed = [":cli"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bazel-differ-linux-arm64",
    embed = [":cli"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bazel-differ-darwin-amd64",
    embed = [":cli"],
    goarch = "amd64",
    goos = "darwin",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "bazel-differ-darwin-arm64",
    embed = [":cli"],
    goarch = "arm64",
    goos = "darwin",
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)
