load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "internal",
    srcs = [
        "bazel.go",
        "bazel_client.go",
        "bazel_rule.go",
        "bazel_sourcefile_target.go",
        "build.pb.go",
        "filesystem.go",
        "git_client.go",
        "io_utils.go",
        "proto_delimited.go",
        "target_hashing_client.go",
    ],
    importpath = "github.com/ewhauser/bazel-differ/internal",
    visibility = ["//:__subpackages__"],
    deps = [
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)

go_test(
    name = "internal_test",
    srcs = [
        "proto_delimited_test.go",
        "target_hashing_client_test.go",
    ],
    data = [
        "query.protodelim",  # keep
    ],
    embed = [":internal"],
    deps = [
        "//mocks",
        "@com_github_golang_mock//gomock",
    ],
)
